--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://data-with-dan.github.io
 baseurl: /myy-portfolio
 
 # Site settings
-title: Daana M. 
+title: Daana's Data Science Portfolio
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
