--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://data-with-dan.github.io
-baseurl: /myy-portfolio
+baseurl: /my-portfolio
 
 # Site settings
 title: Daana's Data Science Portfolio
